dist/1.0/bin/sample/retrieveUnpackaged/objects/MPLS_Service__c.object
<CustomObject>
    <description>MPLS Class of Services</description>
    <fields>
        <fullName>Destination_Address_Wildcard__c</fullName>
        <label>Destination Address / Wildcard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Port__c</fullName>
        <label>Destination Port</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forward_Deny__c</fullName>
        <label>Forward / Deny</label>
        <picklist>
            <picklistValues>
                <fullName>Forward</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deny</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keyword_1__c</fullName>
        <label>Keyword 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword_2__c</fullName>
        <label>Keyword 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPLS_Service_Type__c</fullName>
        <label>MPLS Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Black (Real-Time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum (Critical Data)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold (Business Data)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver (Other)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Protocol__c</fullName>
        <label>Protocol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Managed MPLS Services</relationshipLabel>
        <relationshipName>MPLS_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Address_Wildcard__c</fullName>
        <label>Source Address / Wildcard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Port__c</fullName>
        <label>Source Port</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>MPLS Service</label>
    <nameField>
        <label>MPLS Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPLS Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>